# seaorm

./: .env  Cargo.toml
entities/: Cargo.toml
entities/src/: author.rs  lib.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230308_145516_create_author.rs  m20230308_145549_create_post.rs
src/: main.rs
