[workspace]
members = [".", "migration", "entities"]

[package]
name = "seaorm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path = "./entities"}
axum = { version = "0.6.10", features = ["http2", "json", "macros", "multipart", "query", "tokio"] }
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "uuid"] }
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
